--- a/movie_data_sentiment_analysis.ipynb
+++ b/movie_data_sentiment_analysis.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLs+mBnDFkR7G1zElVgmqy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +29,7 @@
       "cell_type": "markdown",
       "source": [
         "# **Dataset decription**\n",
-        "IMDB dataset having 50K movie reviews for natural language processing or Text analytics. this is a dataset of 25,000 highly polar reviews for training and 25,000 for testing.So predict the number pf positive and negative reviews using either classification or deep learning algorithms."
+        "IMDB dataset having 50K movie reviews for natural language processing or Text analytics. this is a dataset of 25,000 highly polar reviews for training and 25,000 for testing.So predict the number pf positive and negative reviews using either regression or deep learning algorithms."
       ],
       "metadata": {
         "id": "brBTvPyQmxu2"
